tests/models/enum/unnamed/string/fail/max_items.stderr
error: Support condition is min_length, max_length, alias, default and validate
 --> tests/models/enum/unnamed/string/fail/max_items.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
